<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textView_welcome_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview_welcome_message"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="34sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/button_add_expense"
            style="@style/defaultButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/button_add_expense" />

        <Button
            android:id="@+id/button_view_expense"
            style="@style/defaultButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/button_view_expense" />

        <Button
            android:id="@+id/button_expenses_summary"
            style="@style/defaultButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/button_expenses_summary" />

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_activity_info_button">

        <ImageView
            android:id="@+id/follow_the_money_center_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:foregroundGravity="center_horizontal"
            android:contentDescription="description image"
            app:srcCompat="@drawable/followthemoney"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/main_activity_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/info_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        android:scaleType="fitCenter"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/info"/>

    <ImageView
        android:id="@+id/main_activity_sms_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/blue_sms_logo"/>


</androidx.constraintlayout.widget.ConstraintLayout>